--- a/docs/App1/Editor.css
+++ b/docs/App1/Editor.css
@@ -42,9 +42,10 @@
     flex-direction: row;
 
     >.Buffer {
-      position: fixed;
+      position: absolute;
       display: none;
       visibility: hidden;
+      top: 1.5em;
 
       &.open {
         display: block;
