--- a/docs/App1/Console.css
+++ b/docs/App1/Console.css
@@ -1,8 +1,7 @@
 .Console {
+  flex: 0 0 25%;
+  width: calc(100% - 2em);
+  overflow: scroll;
+
   padding: 1em;
-
-  flex: 0 0 200px;
-  width: 100%;
-
-  box-shadow: 0 0 0 1px black;
 }
