--- a/docs/App1/Editor.css
+++ b/docs/App1/Editor.css
@@ -51,16 +51,30 @@
   }
 
   .Point {
-    position: relative;
+    /* position: relative; */
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
     height: 100%;
 
-    &>.Buffer {
-      position: absolute;
-      top: 2em;
+
+    >.Left,
+    >.Middle,
+    >.Right {
+      height: 100%;
+      min-width: calc(var(--Handle--width) / 3);
+
+      /* transition:
+        background-color 0.2s ease-in,
+        box-shadow 0.2s ease-in; */
+    }
+
+    .Buffer {
+      /* position: absolute;
+      top: 2em; */
+      margin-top: -0.5em;
+
       padding: 0.5em;
       width: fit-content;
 
@@ -68,7 +82,7 @@
       flex-direction: column;
       gap: 0.5em;
 
-      border-radius: 1em;
+      border-radius: 0.5em;
       background: rgba(0, 0, 0, 0.1);
       backdrop-filter: blur(15px);
       -webkit-backdrop-filter: blur(15px);
@@ -77,10 +91,9 @@
       animation: Buffer-appear 0.2s forwards linear;
 
       &>.query {
-        display: inline-block;
         outline: none;
         border: none;
-        border-radius: 1em;
+        border-radius: 1em 1em 1em 0;
         padding: 0.5em;
 
         width: fit-content;
@@ -111,18 +124,22 @@
 
         &>.BufferOption {
           padding: 0.5em;
-          border-radius: 1em;
+          border-radius: 0 1em 1em 1em;
 
           background: var(--Editor--background);
-          box-shadow: 0 0 0 0.1em black;
+          box-shadow: 0 0 0 0 black inset;
 
           white-space: nowrap;
 
-          transition: all 0.2s ease;
+          /* transition: all 0.2s linear; */
 
           &.selected {
-            background: color-mix(in srgb, blue, transparent 90%);
-            box-shadow: 0 0 0 0.1em black, 0 0 15px hsla(210deg 100% 60% / 0.5), 0 4px 10px rgba(0, 0, 0, 0.2);
+            /* background: var(--Handle_inside--background); */
+            /* box-shadow:
+              0 0 0 0.1em black inset,
+              0 0 15px hsla(210deg 100% 60% / 0.5),
+              0 0 10px rgba(0, 0, 0, 0.2); */
+            box-shadow: 0 0 0 0.1em black inset;
           }
 
           animation: BufferOption-appear 0.2s linear forwards;
@@ -130,16 +147,6 @@
       }
     }
 
-    >.Left,
-    >.Middle,
-    >.Right {
-      height: 100%;
-      width: calc(var(--Handle--width) / 3);
-
-      /* transition:
-        background-color 0.2s ease-in,
-        box-shadow 0.2s ease-in; */
-    }
 
     &.Point_Handle_PointStatus {
       &>.Middle {
@@ -303,13 +310,13 @@
 
 @keyframes Buffer-appear {
   from {
-    opacity: 0;
-    transform: translateY(-1em);
+    /* opacity: 0; */
+    /* transform: translateY(-1em); */
   }
 
   to {
-    opacity: 1;
-    transform: translateY(0);
+    /* opacity: 1; */
+    /* transform: translateY(0); */
   }
 }
 
