--- a/docs/App1/Editor.css
+++ b/docs/App1/Editor.css
@@ -59,9 +59,9 @@
     height: 100%;
 
 
-    >.Left,
-    >.Middle,
-    >.Right {
+    &>.Left,
+    &>.Middle,
+    &>.Right {
       height: 100%;
       min-width: calc(var(--Handle--width) / 3);
 
@@ -157,31 +157,31 @@
     }
 
     &.SpanH_Handle_Left_PointStatus {
-      >.Right {
+      >.Left {
         background: var(--Handle--background-color);
         border-radius: var(--Handle_Left--border-radius);
       }
 
-      &.LeftFocus_PointStatus>.Right {
+      &.LeftFocus_PointStatus>.Left {
         box-shadow: var(--Handle_Focus--box-shadow);
       }
 
+      &>.Middle,
+      &>.Right,
       &~* {
         background: var(--Handle_inside--background);
       }
     }
 
     &.SpanH_Handle_Right_PointStatus {
-      >.Left {
+      >.Right {
         background: var(--Handle--background-color);
         border-radius: var(--Handle_Right--border-radius);
       }
 
-      &.RightFocus_PointStatus>.Left {
+      &.RightFocus_PointStatus>.Right {
         box-shadow: var(--Handle_Focus--box-shadow);
       }
-
-      background: var(--Editor--background);
 
       &~* {
         background: var(--Editor--background);
@@ -189,56 +189,24 @@
     }
 
     &.ZipperH_Handle_OuterLeft_PointStatus {
-      >.Right {
+      >.Left {
         background: var(--Handle--background-color);
         border-radius: var(--Handle_Left--border-radius);
       }
 
-      &.LeftFocus_PointStatus>.Right {
+      &.LeftFocus_PointStatus>.Left {
         box-shadow: var(--Handle_Focus--box-shadow);
       }
 
+      &>.Middle,
+      &>.Right,
       &~* {
         background: var(--Handle_inside--background);
       }
-
-      background: transparent;
     }
 
     &.ZipperH_Handle_InnerLeft_PointStatus {
-      >.Right {
-        background: var(--Handle--background-color);
-      }
-
-      &.LeftFocus_PointStatus>.Right {
-        box-shadow: var(--Handle_Focus--box-shadow);
-      }
-
-      &~* {
-        background: var(--Editor--background);
-      }
-
-      background: transparent;
-    }
-
-    &.ZipperH_Handle_InnerRight_PointStatus {
-      >.Left {
-        background: var(--Handle--background-color);
-      }
-
-      &.RightFocus_PointStatus>.Left {
-        box-shadow: var(--Handle_Focus--box-shadow);
-      }
-
-      background: transparent;
-
-      &~* {
-        background: transparent;
-      }
-    }
-
-    &.ZipperH_Handle_InnerLeft_PointStatus.ZipperH_Handle_InnerRight_PointStatus {
-      >.Left {
+      &>.Left {
         background: var(--Handle--background-color);
       }
 
@@ -246,34 +214,40 @@
         box-shadow: var(--Handle_Focus--box-shadow);
       }
 
-      &.RightFocus_PointStatus>.Left {
-        box-shadow: none;
-      }
-
-      >.Middle {
+      &~* {
         background: var(--Editor--background);
       }
 
+      background: var(--Editor--background)
+    }
+
+    &.ZipperH_Handle_InnerRight_PointStatus {
       >.Right {
         background: var(--Handle--background-color);
-      }
-
-      &.LeftFocus_PointStatus>.Right {
-        box-shadow: none;
       }
 
       &.RightFocus_PointStatus>.Right {
         box-shadow: var(--Handle_Focus--box-shadow);
       }
+
+      &~* {
+        background: transparent;
+      }
     }
 
     &.ZipperH_Handle_OuterRight_PointStatus {
-      >.Left {
+
+      &>.Left,
+      &>.Middle {
+        background: var(--Handle_inside--background);
+      }
+
+      &>.Right {
         background: var(--Handle--background-color);
         border-radius: var(--Handle_Right--border-radius);
       }
 
-      &.RightFocus_PointStatus>.Left {
+      &.RightFocus_PointStatus>.Right {
         box-shadow: var(--Handle_Focus--box-shadow);
       }
 
