rendering shared between actual renderin of stuff in editor and the preview in the buffer

--- a/docs/App1/Editor.css
+++ b/docs/App1/Editor.css
@@ -51,6 +51,14 @@
     }
   }
 
+  .Hole {
+    padding: 0 0.5em;
+    background-color: black;
+    color: white;
+    border-radius: var(--Handle--width);
+    animation: rainbow-glow 20s infinite linear
+  }
+
   .Point {
     display: flex;
     flex-direction: row;
