fixed bug in pasting zipper at zipper

--- a/docs/App1/Editor.css
+++ b/docs/App1/Editor.css
@@ -275,7 +275,7 @@
             box-shadow: 0 0 0 0.1em black inset;
           }
 
-          animation: Edit-appear 0.2s linear forwards;
+          /* animation: Edit-appear 0.2s linear forwards; */
         }
       }
     }
