--- a/docs/App.css
+++ b/docs/App.css
@@ -7,4 +7,30 @@
   flex-direction: column;
   justify-content: stretch;
   align-items: stretch;
+
+  &>.header {
+    padding: 0.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: stretch;
+
+    box-shadow: 0 0.1em 1em 0 black;
+
+    &>.option {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 1em;
+
+      &>.label {
+        font-weight: bold;
+        font-family: monospace;
+      }
+
+      &>.value {
+        font-family: monospace
+      }
+    }
+  }
 }
