can query group manually in Sexp

--- a/docs/Editor.css
+++ b/docs/Editor.css
@@ -237,8 +237,10 @@
 
         animation: rainbow-glow 20s infinite linear;
 
-        background: #1a1a1a;
-        color: white;
+        /* background: #1a1a1a;
+        color: white; */
+
+        background: var(--Editor--background);
 
         font-size: 1em;
         font-family: inherit;
